{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 346,
  "lineage": "0fd31161-01de-cf79-f15f-df69c6d75c12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:internet-gateway/igw-03a0d5086583d86d6",
            "id": "igw-03a0d5086583d86d6",
            "owner_id": "471112690610",
            "tags": {
              "Name": "devops_internet_gateway"
            },
            "tags_all": {
              "Name": "devops_internet_gateway"
            },
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops_alb_orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-orders/3e4570dcd73ad3b1",
            "arn_suffix": "app/devops-alb-orders/3e4570dcd73ad3b1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-orders-1084768441.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-orders/3e4570dcd73ad3b1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb-orders",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e24de11551806dea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01adcbc5fb600c69a"
              },
              {
                "subnet_id": "subnet-072df1c4e9f6337b7"
              }
            ],
            "subnets": [
              "subnet-01adcbc5fb600c69a",
              "subnet-072df1c4e9f6337b7"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-07f60ffc93c2758c6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops_alb_payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-payments/585b9ae29e2b8239",
            "arn_suffix": "app/devops-alb-payments/585b9ae29e2b8239",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-payments-1653945541.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-payments/585b9ae29e2b8239",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb-payments",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e24de11551806dea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01adcbc5fb600c69a"
              },
              {
                "subnet_id": "subnet-072df1c4e9f6337b7"
              }
            ],
            "subnets": [
              "subnet-01adcbc5fb600c69a",
              "subnet-072df1c4e9f6337b7"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-07f60ffc93c2758c6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops_alb_products",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-products/e05415cab2d4eb06",
            "arn_suffix": "app/devops-alb-products/e05415cab2d4eb06",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-products-594458812.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-products/e05415cab2d4eb06",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb-products",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e24de11551806dea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01adcbc5fb600c69a"
              },
              {
                "subnet_id": "subnet-072df1c4e9f6337b7"
              }
            ],
            "subnets": [
              "subnet-01adcbc5fb600c69a",
              "subnet-072df1c4e9f6337b7"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-07f60ffc93c2758c6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "devops_alb_shipping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-shipping/9ac4fc6b766f67ec",
            "arn_suffix": "app/devops-alb-shipping/9ac4fc6b766f67ec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-alb-shipping-615899119.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-shipping/9ac4fc6b766f67ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-alb-shipping",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e24de11551806dea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01adcbc5fb600c69a"
              },
              {
                "subnet_id": "subnet-072df1c4e9f6337b7"
              }
            ],
            "subnets": [
              "subnet-01adcbc5fb600c69a",
              "subnet-072df1c4e9f6337b7"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-07f60ffc93c2758c6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops_listener_orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-orders/3e4570dcd73ad3b1/f567151e91cf1760",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-orders/8c6c1870e0ce83e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-orders/3e4570dcd73ad3b1/f567151e91cf1760",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-orders/3e4570dcd73ad3b1",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_orders",
            "aws_lb_target_group.devops_tg_orders",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops_listener_payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-payments/585b9ae29e2b8239/2106feece2c3b9fe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-payments/3bb9f328990e0743",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-payments/585b9ae29e2b8239/2106feece2c3b9fe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-payments/585b9ae29e2b8239",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_payments",
            "aws_lb_target_group.devops_tg_payments",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops_listener_products",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-products/e05415cab2d4eb06/af93065e7f8fb0c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-products/c8a0158bf49edc40",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-products/e05415cab2d4eb06/af93065e7f8fb0c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-products/e05415cab2d4eb06",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_products",
            "aws_lb_target_group.devops_tg_products",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "devops_listener_shipping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-shipping/9ac4fc6b766f67ec/359b01fa488743cb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-shipping/edfd2ddac05e885a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-shipping/9ac4fc6b766f67ec/359b01fa488743cb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-shipping/9ac4fc6b766f67ec",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_shipping",
            "aws_lb_target_group.devops_tg_shipping",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops-orders-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-orders/8c6c1870e0ce83e6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-orders/3e4570dcd73ad3b1/f567151e91cf1760/b87d6fe7e7f04507",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/orders"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-orders/3e4570dcd73ad3b1/f567151e91cf1760/b87d6fe7e7f04507",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-orders/3e4570dcd73ad3b1/f567151e91cf1760",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_orders",
            "aws_lb_listener.devops_listener_orders",
            "aws_lb_target_group.devops_tg_orders",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops-payments-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-payments/3bb9f328990e0743",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-payments/585b9ae29e2b8239/2106feece2c3b9fe/0771bdea2ac418d5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/payments"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-payments/585b9ae29e2b8239/2106feece2c3b9fe/0771bdea2ac418d5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-payments/585b9ae29e2b8239/2106feece2c3b9fe",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_payments",
            "aws_lb_listener.devops_listener_payments",
            "aws_lb_target_group.devops_tg_payments",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops-products-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-products/c8a0158bf49edc40",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-products/e05415cab2d4eb06/af93065e7f8fb0c7/8c9443dd83ff9214",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/products"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-products/e05415cab2d4eb06/af93065e7f8fb0c7/8c9443dd83ff9214",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-products/e05415cab2d4eb06/af93065e7f8fb0c7",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_products",
            "aws_lb_listener.devops_listener_products",
            "aws_lb_target_group.devops_tg_products",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "devops-shipping-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-shipping/edfd2ddac05e885a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-shipping/9ac4fc6b766f67ec/359b01fa488743cb/4d2717cc609d9a1f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/shipping/c"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener-rule/app/devops-alb-shipping/9ac4fc6b766f67ec/359b01fa488743cb/4d2717cc609d9a1f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:listener/app/devops-alb-shipping/9ac4fc6b766f67ec/359b01fa488743cb",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.devops_alb_shipping",
            "aws_lb_listener.devops_listener_shipping",
            "aws_lb_target_group.devops_tg_shipping",
            "aws_security_group.security_group",
            "aws_subnet.us_east_1a_subnet",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops_tg_orders",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-orders/8c6c1870e0ce83e6",
            "arn_suffix": "targetgroup/devop-tg-orders/8c6c1870e0ce83e6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/orders",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-orders/8c6c1870e0ce83e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devop-tg-orders",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops_tg_payments",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-payments/3bb9f328990e0743",
            "arn_suffix": "targetgroup/devop-tg-payments/3bb9f328990e0743",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/payments",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-payments/3bb9f328990e0743",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-payments/585b9ae29e2b8239"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devop-tg-payments",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops_tg_products",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-products/c8a0158bf49edc40",
            "arn_suffix": "targetgroup/devop-tg-products/c8a0158bf49edc40",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/products",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-products/c8a0158bf49edc40",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-products/e05415cab2d4eb06"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devop-tg-products",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops_tg_shipping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-shipping/edfd2ddac05e885a",
            "arn_suffix": "targetgroup/devop-tg-shipping/edfd2ddac05e885a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/shipping/c",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112690610:targetgroup/devop-tg-shipping/edfd2ddac05e885a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112690610:loadbalancer/app/devops-alb-shipping/9ac4fc6b766f67ec"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devop-tg-shipping",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:route-table/rtb-006533b5a698751d5",
            "id": "rtb-006533b5a698751d5",
            "owner_id": "471112690610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a0d5086583d86d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops_route_table"
            },
            "tags_all": {
              "Name": "devops_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00cb0cd6e8265f819",
            "route_table_id": "rtb-006533b5a698751d5",
            "subnet_id": "subnet-072df1c4e9f6337b7"
          },
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_route_table.devops_route_table",
            "aws_subnet.us_east_1a_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081a7ff1e347438b7",
            "route_table_id": "rtb-006533b5a698751d5",
            "subnet_id": "subnet-01adcbc5fb600c69a"
          },
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_route_table.devops_route_table",
            "aws_subnet.us_east_1b_subnet",
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:security-group/sg-0e24de11551806dea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e24de11551806dea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "471112690610",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:subnet/subnet-072df1c4e9f6337b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072df1c4e9f6337b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112690610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us_east_1a_subnet"
            },
            "tags_all": {
              "Name": "us_east_1a_subnet"
            },
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us_east_1b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:subnet/subnet-01adcbc5fb600c69a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01adcbc5fb600c69a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112690610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us_east_1b_subnet"
            },
            "tags_all": {
              "Name": "us_east_1b_subnet"
            },
            "vpc_id": "vpc-07f60ffc93c2758c6"
          },
          "dependencies": [
            "aws_vpc.devops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112690610:vpc/vpc-07f60ffc93c2758c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092f6dac546d17eee",
            "default_route_table_id": "rtb-07b23761e92ae6855",
            "default_security_group_id": "sg-07d77a4c80ed086de",
            "dhcp_options_id": "dopt-08cdddb2e953ac59a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f60ffc93c2758c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b23761e92ae6855",
            "owner_id": "471112690610",
            "tags": {
              "Name": "devops"
            },
            "tags_all": {
              "Name": "devops"
            }
          }
        }
      ]
    }
  ]
}